--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,4 +1,4 @@
 <header>
-    <img src="../../../assets/icons/buy-logo.svg" />
+    <img src="../../../assets/icons/car-Icon.svg" />
     <h1>{{pageTitle}}</h1>
 </header>
