adding props for item

--- a/src/app/pages/home/components/product-item/product-item.component.html
+++ b/src/app/pages/home/components/product-item/product-item.component.html
@@ -1,15 +1,12 @@
 <div class='content'>
     <div class='content-top'>
-        <img src='https://robociencia.com.br/wp-content/uploads/2021/03/robo.png' />
+        <img src='{{image}}' />
     </div>
     <div class='content-bottom'>
         <a [href]='{href}'>{{name}}</a>
-        <h2>Por R$ 8,11 
-        </h2>
-        <div id="text-content">
-            
-            <span>em até</span>
-                <h3>1x de R$8,11</h3> <span>sem juros</span>
+        <div class="color-content">
+            <h2>Cor do carro</h2>
+            <div [ngStyle]="{'background-color': color}"></div>
         </div>
 
     </div>
