--- a/src/app/pages/home/components/product-item/product-item.component.scss
+++ b/src/app/pages/home/components/product-item/product-item.component.scss
@@ -9,7 +9,7 @@
     background-color: $white;
     border-radius: 5px;
     border: 1px solid $template-color-3;
-    padding-bottom:2rem;
+    padding-bottom: 2rem;
 }
 
 img {
@@ -32,23 +32,28 @@ a {
     color: $text-color-2;
 }
 
-h2 {
-    font-size: 18px;
-    font-weight: 900
-}
-
-h3 {
-    font-weight: bold;
-    font-size: 12px;
-}
-
-span {
-    font-size: 12px;
-}
-#text-content{
-    margin-top:10px;
+.color-content {
+    margin-top: 1rem;
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
-    width: 80%;
+    align-items: center;
+
+    h2 {
+        font-size: 18px;
+        font-weight: 900
+    }
+
+    div {
+        margin-left:0.5rem;
+        width: 2rem;
+        height: 2rem;
+        border-radius:30px;
+        border: 0.1rem solid black;
+
+        &:hover{
+        
+        }
+    }
+
+
 }
