--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -10,9 +10,9 @@
     width: auto;
     min-height: 200px;
     padding: 1rem;
-    background: $template-color-1;
+    background: $background;
     border-radius: 10px;
-    border: 1px solid $template-color-8;
+    // border: 1px solid $template-color-8;
 }
 
 .content-title {
