--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -18,7 +18,8 @@ $gray-2: #747474;
 $gray-3: #4b4b4b;
 
 
-$background: $template-color-7;
+$background: #f2f2f2;
 $text-color-1: $white;
-$text-color-2: $black;
+$text-color-2:#3f3f40;
 $text-color-3: $gray-1;
+$text-color-4:black;
