--- a/src/app/pages/home/components/product-item/product-item.component.html
+++ b/src/app/pages/home/components/product-item/product-item.component.html
@@ -3,11 +3,17 @@
         <img src='{{image}}' />
     </div>
     <div class='content-bottom'>
-        <a [href]='{href}'>{{name}}</a>
+        <h1>{{name}}</h1>
+        <div class="information-content"><img src='../../../../../assets/icons/location-Icon.svg' />
+            <h1>em São José dos Campos</h1>
+        </div>
+        <div class="information-content"><img src='../../../../../assets/icons/date-Icon-com.svg' />
+            <h1 id="year">{{year}}</h1>
+        </div>
         <div class="color-content">
             <h2>Cor do carro</h2>
             <div [ngStyle]="{'background-color': color}"></div>
         </div>
-
+        <button class="conhecer-button">Conhecer melhor</button>
     </div>
 </div>
