passing is_sold param for isSoldComponent

--- a/src/app/pages/home/components/product-item/product-item.component.html
+++ b/src/app/pages/home/components/product-item/product-item.component.html
@@ -10,6 +10,7 @@
         <div class="information-content"><img src='../../../../../assets/icons/date-Icon-com.svg' />
             <h1 id="year">{{year}}</h1>
         </div>
+        <home-is-sold [isSold]='isSold' ></home-is-sold>
         <div class="color-content">
             <h2>Cor do carro</h2>
             <div [ngStyle]="{'background-color': color}"></div>
