--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -3,7 +3,7 @@
     <section class="content-itens">
         <h1 class="content-title">Veículos</h1>
         <div class='grid-itens'*ngFor="let vehicle of vehicles">
-            <home-product-item name="{{vehicle.name}}" color="{{vehicle.color}}"  image="{{vehicle.image}}"></home-product-item>
+            <home-product-item name="{{vehicle.name}}" color="{{vehicle.color}}"  image="{{vehicle.image}}" [isSold]="vehicle.is_sold"></home-product-item>
         </div>
     </section>
 </div>
