finishing product styles

--- a/src/app/pages/home/components/is-sold/is-sold.component.html
+++ b/src/app/pages/home/components/is-sold/is-sold.component.html
@@ -1,1 +1,4 @@
-<p>is-sold works!</p>
+<section >
+    <div class="content" *ngIf="isSold"><img src='../../../../../assets/icons/on-Icon.svg'/>Disponível</div>
+    <div class="content" *ngIf="!isSold"><img src='../../../../../assets/icons/off-Icon.svg'/>Vendido</div>
+</section>
