--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,6 +1,6 @@
 <app-header pageTitle="Home"></app-header>
 <div class="content">
-    <home-brands-content></home-brands-content>
+    <home-brands-content [brands]="brands"></home-brands-content>
     <section class="content-itens">
         <h1 class="content-title">Veículos</h1>
         <div class='grid-itens'>
