--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -5,7 +5,7 @@ header{
     align-items: center;
     // justify-content: center;
     flex-direction: row;
-    width: auto;
+    width: 100%;
     height:4rem;
     background-color: $template-color-8;
     padding:5px 2rem;
