--- a/src/app/pages/home/components/brands-content/brands-content.component.scss
+++ b/src/app/pages/home/components/brands-content/brands-content.component.scss
@@ -1,25 +1,23 @@
 @import '../../../../../styles/variables.scss';
 
-section{
+section {
     width: 100%;
     display: flex;
     justify-content: center;
 }
 
 .content {
-    width:80%;
+    width: 100%;
     height: auto;
     // display: flex;
     // flex-direction: row;
-
     display: grid;
-    grid-template-columns: repeat(auto-fit,minmax(220px,1fr));
-    grid-column-gap: 10px;
-    grid-row-gap: 15px;
-
-    @media(max-width:1700px){
-        width:90%;
+    grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+    @media(max-width:510px) {
+        width: 100vw;
+        grid-template-columns: repeat(auto-fit, minmax( 30vw, 1fr));
     }
+
 }
 
 .brand-container {
@@ -33,11 +31,19 @@ section{
     border: 1px solid $gray-1;
     border-radius: 10px;
 
+    @media(max-width:510px) {
+        margin:0;
+        width: 29vw;
+        height: 10vh;
+    }
+
     img {
         object-fit: cover;
-        min-width: 100px;
-        width: 90%;
-        height: 90%;
+
+        max-width: 95%;
+        max-height: 95%;
+        // width: 20%;
+        // height: 20%;
         // width: 200px;
         // height:90px;
     }
