--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,4 +1,4 @@
-<app-header pageTitle="Home"></app-header>
+<app-header pageTitle="Home" [routes]="routes"></app-header>
 <div class="content">
     <home-brands-content [brands]="brands"></home-brands-content>
     <section class="content-itens">
