--- a/src/app/pages/create-vehicle/create-vehicle.component.html
+++ b/src/app/pages/create-vehicle/create-vehicle.component.html
@@ -1,1 +1,1 @@
-<p>create-vehicle works!</p>
+<app-create-vehicle-header pageTitle="Cadastrar Veículo" [routes]="routes"></app-create-vehicle-header>
