--- a/src/app/pages/create-vehicle/create-vehicle.component.html
+++ b/src/app/pages/create-vehicle/create-vehicle.component.html
@@ -1,1 +1,23 @@
 <app-create-vehicle-header pageTitle="Cadastrar Veículo" [routes]="routes"></app-create-vehicle-header>
+<div class="content">
+    <form class="content-form" [formGroup]="cadastroForm" (ngSubmit)="submitForm()">
+        <h1>Adicione um novo veículo</h1>
+        <div class="input-container">
+            <input class="input-content" formControlName="name" placeholder='Name'>
+        </div>
+        <div class="input-container">
+            <input class="input-content" formControlName="image" placeholder='Imagem'>
+        </div>
+        <div class="input-container">
+            <input class="input-content" type='number' formControlName="year" placeholder='Ano'>
+        </div>
+        <div class="input-container">
+            <input class="input-content" formControlName="description" placeholder='Descrição'>
+        </div>
+        <div class="allinputs-content">
+            <input id="c2" type="radio">
+            <label for="c2">Checkbox</label>
+        </div>
+        <button class="submit-button" type="submit">Cadastrar</button>
+    </form>
+</div>
