--- a/src/app/pages/create-vehicle/create-vehicle.component.html
+++ b/src/app/pages/create-vehicle/create-vehicle.component.html
@@ -17,21 +17,25 @@
         <h2>Selecione a marca do veículo</h2>
         <section class="brand-grid">
             <div class="allinputs-content" *ngFor="let brand of brands">
-                <input id="c2" type="radio"  [value]="brand.id" formControlName="brand_id">
+                <input id="c2" type="radio" [value]="brand.id" formControlName="brand_id">
                 <label for="c2">{{brand.name}}</label>
             </div>
         </section>
         <h2>Selecione o status do veículo</h2>
         <section class="brand-grid">
             <div class="allinputs-content">
-                <input id="c2" type="radio"  [value]="false" formControlName="is_sold">
+                <input id="c2" type="radio" [value]="false" formControlName="is_sold">
                 <label for="c2">Disponível</label>
             </div>
             <div class="allinputs-content">
-                <input id="c2" type="radio"  [value]="true" formControlName="is_sold">
+                <input id="c2" type="radio" [value]="true" formControlName="is_sold">
                 <label for="c2">Vendido</label>
             </div>
         </section>
+        <fieldset>
+            <legend>Select Color</legend>
+            <input type="color" formControlName="color" value="white"><br /><br />
+        </fieldset>
         <button class="submit-button" type="submit">Cadastrar</button>
     </form>
 </div>
