--- a/src/app/pages/create-vehicle/create-vehicle.component.html
+++ b/src/app/pages/create-vehicle/create-vehicle.component.html
@@ -33,8 +33,8 @@
             </div>
         </section>
         <fieldset>
-            <legend>Select Color</legend>
-            <input type="color" formControlName="color" value="white"><br /><br />
+            <legend>Selecione a cor do veículo</legend>
+            <input type="color" formControlName="color"><br /><br />
         </fieldset>
         <button class="submit-button" type="submit">Cadastrar</button>
     </form>
