--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -1,4 +1,5 @@
 @import '../../../styles/variables.scss';
+@import '../../../styles/inputs.scss';
 
 .content {
     width: auto;
@@ -30,16 +31,137 @@
     grid-column-gap: 16px;
     grid-column: 150px calc(90vw - 150px);
 
-    @media only screen and  (max-width:1560px){
+    @media only screen and (max-width:1560px) {
         grid-template-areas:
-        "a a a";
+            "a a a";
     }
-    @media only screen and  (max-width:1200px){
+
+    @media only screen and (max-width:1200px) {
         grid-template-areas:
-        "a a";
+            "a a";
     }
-    @media only screen and  (max-width:800px){
+
+    @media only screen and (max-width:800px) {
         grid-template-areas:
-        "a";
+            "a";
+    }
+}
+
+.brands-section {
+    width: 100%;
+    display: flex;
+    // align-items: center;
+    flex-direction: column;
+    margin-bottom: 1rem;
+
+    h2 {
+        font-weight: bold;
+        color: $text-color-2;
+        margin-bottom: 1rem;
+        margin-left: 2rem;
+    }
+}
+
+.brands-content {
+    width: 100%;
+    height: auto;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+
+    @media(max-width:510px) {
+        width: 100vw;
+        grid-template-columns: repeat(auto-fit, minmax(30vw, 1fr));
+    }
+
+}
+
+.brand-container {
+    width: 220px;
+    height: 98px;
+    margin: 5px 1rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: rgb(255, 255, 255);
+    border: 1px solid $gray-1;
+    border-radius: 10px;
+
+    @media(max-width:510px) {
+        margin: 0;
+        width: 29vw;
+        height: 10vh;
+    }
+
+    img {
+        object-fit: cover;
+        max-width: 95%;
+        max-height: 95%;
+    }
+
+    &:hover {
+        filter: contrast(0.5);
+    }
+}
+
+
+.button-removeFilters {
+    padding: 0.5rem 1rem;
+    border-radius: 10px;
+    border: none;
+    color: white;
+    font-size: 16px;
+    font-weight: 900;
+    background: $template-color-8;
+
+    &:hover {
+        background: $template-color-6;
+    }
+
+    margin:1rem 0;
+}
+
+
+.filter-input {
+    display: flex;
+    flex-direction: column;
+
+    label {
+        font-weight: 600;
+    }
+
+    input {
+        width: 500px;
+        border: 1px solid white;
+        -webkit-box-shadow:
+            inset 0 0 8px rgba(0, 0, 0, 0.1),
+            0 0 16px rgba(0, 0, 0, 0.1);
+        -moz-box-shadow:
+            inset 0 0 8px rgba(0, 0, 0, 0.1),
+            0 0 16px rgba(0, 0, 0, 0.1);
+        box-shadow:
+            inset 0 0 8px rgba(0, 0, 0, 0.1),
+            0 0 16px rgba(0, 0, 0, 0.1);
+        padding: 10px;
+        background: rgba(255, 255, 255, 0.5);
+        margin: 0 0 10px 0;
+    }
+    input:invalid {
+        border-color: red !important;
+      }
+      input:valid {
+        border-color: green !important;
+      }
+    button{
+        width: 100px;
+        margin-left:1rem;
+        height: 2.5rem;
+        border-radius: 10px;
+        border: 4px solid $template-color-2;
+        background-color: $template-color-1;
+        font-weight: 600;
+    
+        &:hover {
+            background-color: $template-color-2;
+        }
     }
 }
