--- a/src/app/pages/create-vehicle/components/create-vehicle-header/create-vehicle-header.component.scss
+++ b/src/app/pages/create-vehicle/components/create-vehicle-header/create-vehicle-header.component.scss
@@ -8,11 +8,12 @@ header {
     width: 100%;
     height: 4rem;
     background-color: $template-color-8;
-    padding: 5px 2rem;
+    padding: 5px 0;
 }
 
 img {
     height: 60px;
+    margin-left:1rem;
 }
 
 h1 {
