--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -172,3 +172,104 @@
         background-color:$template-color-4;
     }
 }
+
+
+.product-item-content {
+    display: flex;
+    flex-direction: column;
+    width: 350px;
+    min-height: 300px;
+    background-color: $white;
+    border-radius: 5px;
+    padding-bottom: 2rem;
+    border-radius: 10px;
+    img {
+        border-top-left-radius: 10px;
+        border-top-right-radius: 10px;
+        object-fit: cover;
+        width: 100%;
+        height: 200px;
+    }
+    h1 {
+        line-height: 18px;
+        width: fit-content;
+        font-size: 20px;
+        font-weight: 900;
+        text-decoration: none;
+        color: $text-color-2;
+    }
+}
+
+
+
+.product-item-content-bottom {
+    margin: 1rem 1rem 0 0.9rem;
+    width: auto;
+}
+
+
+
+.product-item-color-content {
+    margin-top: 0.5rem;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+
+    h2 {
+        font-size: 18px;
+        font-weight: 900;
+        color: $text-color-2;
+    }
+
+    div {
+        margin-left: 0.5rem;
+        width: 2rem;
+        height: 2rem;
+        border-radius: 30px;
+        border: 0.1rem solid black;
+        &:hover {}
+    }
+
+
+}
+
+.product-item-information-content {
+    margin-top: 1rem;
+    display: flex;
+    flex-direction: row;
+
+    img {
+        height: 30px;
+        width: 30px;
+        object-fit: contain;
+        margin-right: 1rem;
+    }
+
+    h1 {
+        width: 150px;
+        font-size: 13px;
+        color: $text-color-2;
+        font-weight: 300;
+    }
+
+    #year {
+        font-size: 17px;
+    }
+}
+
+.product-item-delete-button {
+    margin-top: 1rem;
+    width: 100%;
+    border: none;
+    min-height: 40px;
+    border-radius: 7px;
+    filter: grayscale(0.5);
+    color: $text-color-1;
+    font-weight: 900;
+    background-color: $warning;
+
+    &:hover {
+        filter: none;
+    }
+
+}
